--- a/index.html
+++ b/index.html
@@ -243,106 +243,105 @@
                 </div>
             </div>
         </section>
-        </main>
+    </main>
 
-        <footer class="footer">
-            <div class="footer__logo-box">
-                <a href="#top">
-                    <!-- <img src="#" alt="Logo" class="footer__logo smooth-goto"> -->
-                </a>
-            </div>
-            <div class="row">
-                <div class="col-1-of-2">
-                    <div class="footer__navigation">
-                        <ul class="footer__list">
-                            <li class="footer__item">
-                                <a href="https://github.com/wliang002" class="footer__link">GitHub</a>
-                            </li>
-                            <li class="footer__item">
-                                <a href="https://www.linkedin.com/in/emily-liangwx/" class="footer__link">LinkedIn</a>
-                            </li>
-                            <li class="footer__item">
-                                <a href="#" class="footer__link">Resume</a>
-                            </li>
-                        </ul>
-                    </div>
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <a href="#top">
+                <!-- <img src="#" alt="Logo" class="footer__logo smooth-goto"> -->
+            </a>
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a href="https://github.com/wliang002" class="footer__link">GitHub</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="https://www.linkedin.com/in/emily-liangwx/" class="footer__link">LinkedIn</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Resume</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-1-of-2">
-                    <p class="footer__copyright">
-                        contact
-                        <a href=# class="footer__link"> email </a>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    contact
+                    <a href=# class="footer__link"> email </a>
+                </p>
+            </div>
+        </div>
+    </footer>
+
+    <div class="popup" id="popup-1">
+        <div class="popup__content">
+            <div class="popup__left">
+                <a href="#section-projects"><img src="img/learn.gif" alt="learnlocal Demo" class="popup__img"></a>
+            </div>
+            <div class="popup__right">
+                <a href="#section-projects" class="popup__close">&times;</a>
+                <h3 class="heading-secondary popup__header-1">learnlocal</h3>
+                <h3 class="heading-tertiary u-margin-bottom-sm">React, Express, MongoDB</h3>
+                <div class="popup__text">
+                    <p>
+                        Sign up to create a profile, add classes, browse classes by category, sign up for classes.
                     </p>
                 </div>
-            </div>
-        </footer>
-
-        <div class="popup" id="popup-1">
-            <div class="popup__content">
-                <div class="popup__left">
-                    <a href="#section-projects"><img src="img/learn.gif" alt="learnlocal Demo" class="popup__img"></a>
-                </div>
-                <div class="popup__right">
-                    <a href="#section-tours" class="popup__close">&times;</a>
-                    <h3 class="heading-secondary popup__header-1">learnlocal</h3>
-                    <h3 class="heading-tertiary u-margin-bottom-sm">React, Express, MongoDB</h3>
-                    <div class="popup__text">
-                        <p>
-                            Sign up to create a profile, add classes, browse classes by category, sign up for classes.
-                        </p>
-                    </div>
-                    <a href="https://learnlocal3.herokuapp.com/" class="btn-text btn-text-1 u-margin-bottom-md">Link
-                        &rarr;</a><br>
-                    <a href="https://github.com/wliang002/learnlocal-p3" class="btn btn--popup popup__btn-2">source
-                        code</a>
-                </div>
+                <a href="https://learnlocal3.herokuapp.com/" class="btn-text btn-text-1 u-margin-bottom-md">Link
+                    &rarr;</a><br>
+                <a href="https://github.com/wliang002/learnlocal-p3" class="btn btn--popup popup__btn-2">source
+                    code</a>
             </div>
         </div>
+    </div>
 
 
-        <div class="popup" id="popup-2">
-            <div class="popup__content">
-                <div class="popup__left">
-                    <a href="#section-projects"><img src="img/trivia.gif" alt="trivaDemo" class="popup__img"></a>
+    <div class="popup" id="popup-2">
+        <div class="popup__content">
+            <div class="popup__left">
+                <a href="#section-projects"><img src="img/trivia.gif" alt="trivaDemo" class="popup__img"></a>
+            </div>
+            <div class="popup__right">
+                <a href="#section-projects" class="popup__close">&times;</a>
+                <h3 class="heading-secondary popup__header-2">trivia game</h3>
+                <h3 class="heading-tertiary u-margin-bottom-sm">HTML, CSS, Javascript</h3>
+                <div class="popup__text">
+                    <p>
+                        A fun trivia game for die-hard "Friends" fans
+                    </p>
                 </div>
-                <div class="popup__right">
-                    <a href="#section-tours" class="popup__close">&times;</a>
-                    <h3 class="heading-secondary popup__header-2">trivia game</h3>
-                    <h3 class="heading-tertiary u-margin-bottom-sm">HTML, CSS, Javascript</h3>
-                    <div class="popup__text">
-                        <p>
-                            A fun trivia game for die-hard "Friends" fans
-                        </p>
-                    </div>
-                    <a href="https://wliang002.github.io/TriviaGame/"
-                        class="btn-text btn-text-2 u-margin-bottom-md">Link &rarr;</a><br>
-                    <a href="https://github.com/wliang002/TriviaGame" class="btn btn--popup popup__btn-3">source
-                        code</a>
-                </div>
+                <a href="https://wliang002.github.io/TriviaGame/" class="btn-text btn-text-2 u-margin-bottom-md">Link
+                    &rarr;</a><br>
+                <a href="https://github.com/wliang002/TriviaGame" class="btn btn--popup popup__btn-3">source
+                    code</a>
             </div>
         </div>
+    </div>
 
-        <div class="popup" id="popup-3">
-            <div class="popup__content">
-                <div class="popup__left">
-                    <a href="#section-projects"><img src="img/friend.gif" alt="friendfinder Demo"
-                            class="popup__img"></a>
+    <div class="popup" id="popup-3">
+        <div class="popup__content">
+            <div class="popup__left">
+                <a href="#section-projects"><img src="img/friend.gif" alt="friendfinder Demo" class="popup__img"></a>
+            </div>
+            <div class="popup__right">
+                <a href="#section-projects" class="popup__close">&times;</a>
+                <h3 class="heading-secondary popup__header-3">friendfinder</h3>
+                <h3 class="heading-tertiary u-margin-bottom-sm">HTML, CSS, Javascript, Express</h3>
+                <div class="popup__text u-margin-bottom-md">
+                    <p>
+                        A compatibility-based "FriendFinder" application. This
+                        full-stack site will take in results from your users' surveys, compare their answers
+                        with those from other users, then display the best overall match
+                    </p>
                 </div>
-                <div class="popup__right">
-                    <a href="#section-tours" class="popup__close">&times;</a>
-                    <h3 class="heading-secondary popup__header-3">friendfinder</h3>
-                    <h3 class="heading-tertiary u-margin-bottom-sm">HTML, CSS, Javascript, Express</h3>
-                    <div class="popup__text u-margin-bottom-md">
-                        <p>
-                            A compatibility-based "FriendFinder" application. This
-                            full-stack site will take in results from your users' surveys, compare their answers
-                            with those from other users, then display the best overall match
-                        </p>
-                    </div>
-                    <a href="https://github.com/wliang002/friend-finder" class="btn btn--popup popup__btn-4">source
-                        code</a>
-                </div>
+                <a href="https://github.com/wliang002/friend-finder" class="btn btn--popup popup__btn-4">source
+                    code</a>
             </div>
         </div>
+    </div>
 
 </body>
 
